<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollIndicators="none"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="0dp"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarThumbVertical="@color/white"
    android:scrollbarTrackVertical="@color/white"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_formpengguna_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_extrabold"
            android:maxLines="2"
            android:text="Koordinator Kelas"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/blue_polman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text=" *"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/til_schedule_name"
            app:layout_constraintStart_toEndOf="@+id/tv_formpengguna_nama" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_schedule_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/enter_the_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_formpengguna_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_schedule_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_formpengguna_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_extrabold"
            android:maxLines="2"
            android:text="Role"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/blue_polman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_schedule_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text=" *"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/til_schedule_desc"
            app:layout_constraintStart_toEndOf="@+id/tv_formpengguna_role" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_schedule_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/select_the_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_formpengguna_role">

            <AutoCompleteTextView
                android:id="@+id/tie_pengguna_role"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:enabled="true"
                android:inputType="textMultiLine"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_formpengguna_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_extrabold"
            android:maxLines="2"
            android:text="Class"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/blue_polman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_schedule_desc" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text=" *"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/til_pengguna_class"
            app:layout_constraintStart_toEndOf="@+id/tv_formpengguna_class" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pengguna_class"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/select_the_class"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_formpengguna_class">

            <AutoCompleteTextView
                android:id="@+id/tie_pengguna_class"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>